load("@rules_ll//ll:defs.bzl", "ll_binary", "ll_compilation_database", "ll_library")

ll_library(
    name = "lib_1",
    srcs = [
        "lib_1/lib_1.c",
        "lib_1/lib_1_additional_source.c",
    ],
    hdrs = ["lib_1/lib_1_private.h"],
    defines = ["A_LOCAL_DEFINE"],
    transitive_defines = ["A_PUBLIC_DEFINE"],
    transitive_hdrs = [
        "lib_1/lib_1_public.h",
        "lib_1/public_include/included_header.h",
    ],
    visibility = ["@rules_ll_examples//:__pkg__"],
)

ll_library(
    name = "lib_2",
    srcs = [
        "lib_2/lib_2.c",
    ],
    hdrs = ["lib_2/lib_2_private.h"],
    transitive_hdrs = ["lib_2/lib_2_public.h"],
)

ll_binary(
    name = "executable",
    srcs = ["executable.cpp"],
    visibility = ["@rules_ll_examples//:__pkg__"],
    deps = [
        ":lib_1",
        ":lib_2",
    ],
)

ll_compilation_database(
    name = "lib_1_compile_commands",
    config = "//:clang_tidy_config",
    target = ":lib_1",
)

ll_compilation_database(
    name = "clang_tidy_example",
    config = "//:clang_tidy_config",
    target = ":executable",
)
